gsap added to projects and continue fixes on mobile gsap

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -27,6 +27,7 @@ $white: #fff;
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 section {
